TestSuite/errors/err0243_const_fun.pas
const a = Sin(0);

begin
end.